# voice-assistant-device

./: .gitignore  CMakeLists.txt  README.md  flash.sh  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old
.claude/agents/: esp32-code-reference.md
docs/: README.md  continuous-conversation-tasks.md  development-notes.md  implementation-plan-continuous-conversation.md  implementation-plan-webrtc.md  opus_implementation.md  websocket-vs-webrtc-comparison.md
main/: CMakeLists.txt  app_main.c  audio_aec.c  audio_aec.h  audio_aec_reference.c  audio_aec_reference.h  audio_controller.c  audio_controller.h  audio_playback.c  audio_playback.h  audio_resampler.c  audio_resampler.h  idf_component.yml  pcm_buffer.c  pcm_buffer.h  proxy_client.c  proxy_client.h  smart_assistant.h  ui.c  ui.h  websocket_client.c  websocket_client.h  wifi_credentials.template.h
main/drivers/lcd/: ST77916.c  ST77916.h
main/drivers/lvgl/: LVGL_Driver.c  LVGL_Driver.h
main/drivers/touch/: CST816.c  CST816.h
